# deep-research-agent

./: .gitignore  CLAUDE.md  README.md  analysis_and_resolution_2026-03-03_11-26-47.md  package-lock.json  package.json
.claude/commands/: test-hub.md
.claude/skills/applied-research/: SKILL.md  applied-research-design-decisions.md
.claude/skills/applied-research/agents/: news-agent.md
.claude/skills/applied-research/references/: aiml-sources.md  date-ranges.md  region-sources.md  topic-grouping.md
.claude/skills/research/: SKILL.md
app/: globals.css  layout.tsx  page.tsx
app/api/news/: route.ts
app/api/research/: route.ts
app/api/sources/: route.ts
backend/: Dockerfile  main.py  nixpacks.toml  pyproject.toml
backend/config/: default_sources.json
backend/models/: schemas.py
backend/services/: db.py  exa_client.py  gmail_service.py  openrouter.py
backend/tools/: date_utils.py  news_tools.py
components/: history-drawer.tsx  nav-links.tsx  news-card.tsx  news-category-panel.tsx  news-dashboard.tsx  news-display.tsx  news-hub-section.tsx  news-panel.tsx  news-toc-sidebar.tsx  newsletter-digest-view.tsx  research-display.tsx  research-section.tsx  search-form.tsx  source-card.tsx  source-manager.tsx  theme-toggle.tsx  topic-group.tsx
context/: section-context.tsx
drizzle/: schema.ts
drizzle/migrations/: 0000_robust_goblin_queen.sql
drizzle/migrations/meta/: 0000_snapshot.json  _journal.json
lib/: excerpt-utils.ts  history-client.ts  tools.ts  user-id.ts
skills/research/references/: clarification-guide.md
supabase/: seed.sql
(+6 files in other folders)
